# zygisk-hook

./: .gitmodules  build.gradle  git-submodule-clean.sh  git-submodule-remove.sh
.github/workflows/: android.yml
gradle/: libs.versions.toml
module/: build.gradle
module-zip/: .gitignore  README.md  adb-install.sh  module.prop
module/jni/: Android.mk  Application.mk  CMakeLists.txt  main.cpp
module/jni/DobbyPrebuilt/include/: dobby.h
module/jni/shadowhook/: CMakeLists.txt
module/src/main/: AndroidManifest.xml
